# XScientist

./: .env.example  .gitignore  ADAPTIVE_LEARNING_README.md  ARCHITECTURE.md  AUTO_IMPROVEMENT_README.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEEP_OPTIMIZATION_README.md  Makefile  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_UPDATE_PHASE2.md  OUTPUT_DIRECTORIES.md  PAPER_METADATA_README.md  PROJECT_USAGE.md  README.en.md  README.md  RESEARCH_GENERATOR_README.md  SECURITY.md  VERIFICATION_CHECKLIST.md  auth_cli.py  bfts_config.yaml  bfts_config_deep.yaml  bfts_config_enhanced.yaml  constraints-ci.txt  continuous_paper_generator.py  continuous_research_daemon.py  daemon_control.example.json  daemon_profile.example.json  example_topic.md  feedback_cli.py  launch_scientist_bfts.py  launch_scientist_zhipu.py  preflight_check.py  pyproject.toml  requirements-smoke.txt  requirements.txt  research_config.example.yaml  research_manager.py  run_daemon_profile.py  run_daemon_rehearsal.py  (+11 more)
ai_scientist/: adaptive_learning_engine.py  agent_guidance_coordinator.py  agent_interface.py  autonomous_evolution.py  baseline_system.py  daemon_feedback_integration.py  enhanced_feedback_system.py  improvement_reporter.py  innovation_enhancer.py  llm.py  paper_metadata.py  perform_auto_improvement.py  perform_icbinb_writeup.py  perform_ideation_temp_free.py  perform_plotting.py  perform_writeup.py  professional_writing_system.py  review_strategies.py  self_learning_knowledge_base.py  vlm.py  writeup_guardrails.py  writing_audit.py  writing_prompt_profiles.py  writing_skill_pack.py  writing_strategies.py
(+145 files in other folders)
