[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-scientist-autonomous-research-lab"
version = "0.1.0"
description = "Autonomous research pipeline with structured review, repair, and self-evolution loops."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "AI Scientist Contributors" },
]
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ai_scientist*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"
extend-exclude = '''
(
  /(
      \.git
    | \.venv
    | \.ci-output
    | _outputs
    | final_papers
    | experiments
  )/
)
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
